# cancel-safe-futures

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  build.rs  no_atomic_cas.rs  release.toml  renovate.json
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdoc/bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  struct.TryGetError.html
rustdoc/cancel_safe_futures/: all.html  index.html  macro.join_then_try!.html  macro.join_then_try.html  sidebar-items.js
rustdoc/cfg_if/: all.html  index.html  macro.cfg_if.html
rustdoc/futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
rustdoc/futures_channel/: all.html  index.html
rustdoc/futures_core/: all.html  index.html  macro.ready.html
rustdoc/futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
rustdoc/futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
rustdoc/futures_macro/: all.html  attr.test_internal.html  index.html  macro.join_internal.html  macro.select_biased_internal.html  macro.select_internal.html  macro.stream_select_internal.html  macro.try_join_internal.html
rustdoc/futures_sink/: all.html  index.html  trait.Sink.html
rustdoc/futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  fn.waker.html  fn.waker_ref.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html  trait.ArcWake.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
rustdoc/futures_util/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
rustdoc/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+6842 more)
rustdoc/lock_api/: all.html  index.html  struct.GuardNoSend.html  struct.GuardSend.html  struct.MappedMutexGuard.html  struct.MappedReentrantMutexGuard.html  struct.MappedRwLockReadGuard.html  struct.MappedRwLockWriteGuard.html  struct.Mutex.html  struct.MutexGuard.html  struct.RawReentrantMutex.html  struct.ReentrantMutex.html  struct.ReentrantMutexGuard.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockWriteGuard.html  trait.GetThreadId.html  trait.RawMutex.html  trait.RawMutexFair.html  trait.RawMutexTimed.html  trait.RawRwLock.html  trait.RawRwLockDowngrade.html  trait.RawRwLockFair.html  trait.RawRwLockRecursive.html  trait.RawRwLockRecursiveTimed.html  trait.RawRwLockTimed.html  trait.RawRwLockUpgrade.html  trait.RawRwLockUpgradeDowngrade.html  trait.RawRwLockUpgradeFair.html  trait.RawRwLockUpgradeTimed.html
rustdoc/memchr/: all.html  fn.memchr.html  (+15 more)
scripts/: commands.sh  no-atomic-cas.sh  with-feature-powerset.sh
src/: coop_cancel.rs  lib.rs  prelude.rs  support.rs
(+4805 files in other folders)
