[package]
name = "cancel-safe-futures"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Alternative futures adapters that are safe to cancel"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[dependencies]
futures-core = { version = "0.3.28", default-features = false }
futures-sink = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }
tokio = { version = "1.28.2", optional = true }

[dev-dependencies]
anyhow = "1.0.72"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-test = "0.4.0"

[features]
# These features are not currently used, however they're here to ensure
# that no-std users always disable default features.
default = ["std"]
std = ["alloc", "futures-core/std", "futures-sink/std", "futures-util/std"]
alloc = ["futures-core/alloc", "futures-sink/alloc", "futures-util/alloc"]

macros = []

# Internal-only feature, used for documentation and doctests. Not part of the public API.
internal-docs = ["dep:tokio", "tokio?/io-util", "tokio?/macros", "tokio?/rt"]
